--- a/main/templates/main.html
+++ b/main/templates/main.html
@@ -25,6 +25,10 @@
                 <td>{{product.price}}</td>
                 <td>{{product.description}}</td>
                 <td>{{product.date_added}}</td>
+                <td>
+                    <a href="{% url 'main:edit_product' product.pk %}"><button>Edit</button></a>
+                    <a href="{% url 'main:delete_product' product.pk %}"><button>Delete</button>
+                </td>
             </tr>
         {% endfor %}
     </table>
