--- a/main/templates/main.html
+++ b/main/templates/main.html
@@ -11,7 +11,7 @@
         </a>
         </div>
     </nav>
-    <h1>Shopping List Page</h1>
+    <h1>Shopping List Page (Tutorial)</h1>
 
     <table id="product_table"></table>
 
